// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for AppFit's track destination action: all fields 1`] = `
Object {
  "anonymousId": "M$xwt#p",
  "eventSource": "segment",
  "name": "M$xwt#p",
  "occurredAt": "2021-02-01T00:00:00.000Z",
  "properties": Object {
    "testType": "M$xwt#p",
  },
  "userId": "M$xwt#p",
}
`;

exports[`Testing snapshot for AppFit's track destination action: required fields 1`] = `
Object {
  "eventSource": "segment",
  "name": "M$xwt#p",
  "occurredAt": "2021-02-01T00:00:00.000Z",
}
`;
